syntax = "proto3";

package ad;
option go_package = "goads/internal/ads/proto";
import "google/protobuf/empty.proto";

service AdService {
  rpc Create(CreateAdRequest) returns (AdResponse) {}
  rpc ChangeStatus(ChangeAdStatusRequest) returns (AdResponse) {}
  rpc Update(UpdateAdRequest) returns (AdResponse) {}
  rpc List(FilterAdsRequest) returns (ListAdResponse) {}
  rpc Search(SearchAdsRequest) returns (ListAdResponse) {}
  rpc Delete(DeleteAdRequest) returns (google.protobuf.Empty) {}
}

message CreateAdRequest {
  string title = 1;
  string text = 2;
  int64 user_id = 3;
}

message ChangeAdStatusRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
  bool published = 3;
}

message UpdateAdRequest {
  int64 ad_id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
}

message AdResponse {
  int64 id = 1;
  string title = 2;
  string text = 3;
  int64 author_id = 4;
  bool published = 5;
  int64 create_date = 6;
  int64 update_date = 7;
}

message FilterAdsRequest {
  bool all = 1;
  int64 date = 2;
  int64 author_id = 3;
}

message SearchAdsRequest {
  string title = 1;
}

message ListAdResponse {
  repeated AdResponse list = 1;
}

message DeleteAdRequest {
  int64 ad_id = 1;
  int64 author_id = 2;
}
